fix container size on mobile

--- a/src/sections/Chat/TextBox/index.module.scss
+++ b/src/sections/Chat/TextBox/index.module.scss
@@ -19,6 +19,11 @@ $command: #aaa;
       margin: 0;
       padding: 0;
 
+      .container {
+        margin: 0;
+        padding: 0;
+      }
+
       .textBox {
         margin: 0;
         padding: 0;
